fixed iframe style and overflow

--- a/styles/base.css
+++ b/styles/base.css
@@ -159,10 +159,13 @@ main h2 {
     border: 1px solid black;
     border-radius: .5rem;
     text-align: center;
+    overflow: hidden;
+    
 }
 .map iframe {
     display: block;
-    width: 99.8%;    
+    width: 99.8%; 
+    border: 0;   
 }
 #menu {
     font-size: 1.5rem;
